--- a/public/page01.html
+++ b/public/page01.html
@@ -237,6 +237,16 @@
               >
                 <span class="truncate">Export calendar</span>
               </button>
+              <div class="flex px-4 py-3 justify-start">
+               <button
+               class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#ededed] text-[#141414] text-sm font-bold leading-normal tracking-[0.015em]">
+               <span class="truncate">Export calendar</span>
+               </button>
+               <a href="page02.html" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#ededed] text-[#141414] text-sm font-bold leading-normal tracking-[0.015em] ml-4">
+               Get Started
+               </a>
+               </div>
+
             </div>
           </div>
         </div>
